<resources>
    <string name="app_name">Desafio Mobits</string>

    <!-- EditTexts e Buttons -->
    <string name="ver_saldo">Ver Saldo</string>
    <string name="deposito">Depósito</string>
    <string name="transferencia">Transferência</string>
    <string name="solicitar_visita">Solicitar Visita do Gerente</string>
    <string name="trocar_usuario">Trocar de Usuário</string>
    <string name="transferir">Transferir</string>
    <string name="meu_saldo">Meu Saldo</string>
    <string name="data">Data</string>
    <string name="horario">Horário</string>
    <string name="movimentacao">Movimentação</string>
    <string name="valor">Valor</string>
    <string name="extrato">Extrato</string>
    <string name="saque">Saque</string>
    <string name="depositar">Depositar</string>

</resources>
