<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MenuPrincipalActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnSaldo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_saldo"
        android:textColor="#FFFFFF"
        android:background="#3F51B5"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#525252"/>
    <Button
        android:id="@+id/btnExtrato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extrato"
        android:textColor="#FFFFFF"
        android:background="#3F51B5"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#525252"/>
    <Button
        android:id="@+id/btnSaque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saque"
        android:textColor="#FFFFFF"
        android:background="#3F51B5"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#525252"/>
    <Button
        android:id="@+id/btnDeposito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deposito"
        android:textColor="#FFFFFF"
        android:background="#3F51B5"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#525252"/>
    <Button
        android:id="@+id/btnTransferencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transferencia"
        android:textColor="#FFFFFF"
        android:background="#3F51B5"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#525252"/>
    <Button
        android:id="@+id/btnSolicitarGerente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/solicitar_visita"
        android:textColor="#FFFFFF"
        android:background="#3F51B5"/>
    <View
        android:id="@+id/viewGerente"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#525252"/>
    <Button
        android:id="@+id/btnTrocarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trocar_usuario"
        android:textColor="#FFFFFF"
        android:background="#3F51B5"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#525252"/>
</LinearLayout>