<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ExtratoActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/layoutTransferencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extrato"
        android:textSize="16dp"
        android:background="#B4B4B4"
        android:paddingTop="8dp"
        android:paddingLeft="8dp"
        android:paddingBottom="8dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#6F6F6F"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B4B4B4">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:padding="8dp"
            android:layout_weight="0.8"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/horario"
            android:padding="8dp"
            android:layout_weight="0.8"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movimentacao"
            android:padding="8dp"
            android:layout_weight="2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/valor"
            android:padding="8dp"
            android:layout_weight="0.9"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#6F6F6F"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewExtrato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>